<resources>
    <string name="app_name">دیوار مهربانی</string>
    <string name="tabbar_home">خانه</string>
    <string name="tabbar_charity">خیریه</string>
    <string name="tabbar_conversation">گفتگو</string>
    <string name="tabbar_more">بیشتر</string>
    <string name="unauthenticated">Unauthenticated User</string>
    <string name="unauthorized">Unauthorized User</string>
    <string name="toast__check_info">Please check your information</string>
    <string name="toast__something_is_wrong">Something went wrong, please try again later</string>
    <string name="no_internet__body">It seems you don\'t have active internet connection. Please try to connect to the internet</string>
    <string name="kindness_wall">دیوار مهربانی</string>
    <string name="register_for_get_and_send_gifts">برای اهدا هدیه از طرف خیرین و یا دریافت هدیه توسط خیریه‌ها نیاز به ثبت نام/ ورود با شماره تلفن است</string>
    <string name="phone_number">شماره تلفن</string>
    <string name="_98">98+</string>
    <string name="phone_number_hint">9xx-xxx-xxxx</string>
    <string name="phone_number_is_wrong">شماره وارد شده صحیح نیست</string>
    <string name="send">ارسال</string>
    <string name="send_to">ارسال به</string>
    <string name="send_again">ارسال مجدد کد</string>
    <string name="skip">رد کردن</string>
    <string name="insert_verification_code">کدی که برای شما ارسال شده است را وارد کنید</string>
    <string name="insert_user_name">برای ورود به سامانه نام کاربری خود را وارد نمایید</string>
    <string name="username">نام کاربری</string>
    <string name="skip_username_warning">در صورت رد کردن این بخش باید مراحل را از ابتدا شروع کنید</string>
    <string name="horizontal_divider">|</string>
    <string name="just_now">دقایقی پیش</string>
    <string name="next">بعدی</string>
    <string name="onboarding_title_first">نیاز داری بردار ، نیاز نداری بذار</string>
    <string name="onboarding_desc_first">همه ما کلی وسیله توی خونه داریم که بهشون !نیاز نداریم اما نمی دونیم باهشون چیکار کنیم چه بهتر از اینکه به کسی بدیم که بهش نیاز داره؟</string>
    <string name="onboarding_title_second">خیریه ها</string>
    <string name="onboarding_desc_second">خیلیا میخوان به نیازمندای واقعی کمک کنن اما نمیدونن چطوری اینجا میتونین کمکهاتون رو به خیریه های مطمئن بدین</string>
    <string name="onboarding_title_third">همیشه رایگان</string>
    <string name="onboarding_desc_third">برنامه دیوار مهربانی برای همیشه رایگان خواهد بود</string>
    <string name="onboarding_title_fourth">متن باز</string>
    <string name="onboarding_desc_fourth">کدهای برنامه همیشه در دسترس برنامه نویسان خواهد بود</string>
    <string name="choose_city">انتخاب شهر</string>
    <string name="choose_your_city">شهر خود را انتخاب کنید</string>
    <string name="lets_go">بزن بریم</string>
    <string name="choose_province">انتخاب استان</string>
    <string name="more_items">موارد بیشتر</string>
    <string name="bookmarks">نشان شده ها</string>
    <string name="setting">تنظیمات</string>
    <string name="blocked_users">کاربر های بلاک شده</string>
    <string name="about">معرفی دیوار مهربانی</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="login">ورود به حساب کاربری</string>
    <string name="category">دسته بندی</string>
    <string name="neighborhood">محل</string>
    <string name="description">توضیحات</string>
    <string name="request">درخواست از طریق چت</string>
    <string name="send_verification_code">ارسال کد ورود</string>
    <string name="close">بستن</string>
    <string name="submit_information">ثبت اطلاعات</string>
    <string name="charities">خیریه ها</string>
    <string name="manager">مسئول</string>
    <string name="central_office">دفتر مرکزی</string>
    <string name="address">آدرس</string>
    <string name="license_number">شماره مجوز</string>
    <string name="national_id">شناسه ملی</string>
    <string name="contact_info">اطلاعات تماس</string>
    <string name="registrationDate">تاریخ ثبت</string>
    <string name="search">جستجو …</string>
    <string name="search_your_word">کلمه مورد نظر خود را جستجو کنید!</string>
    <string name="category_choosing">انتخاب دسته بندی ها</string>
    <string name="search_your_category">دسته بندی موردنظر خود را جست و جو کنید</string>
    <string name="choose_neighborhood">انتخاب منطقه</string>
    <string name="search_your_neighborhood">منطقه موردنظر خود را جست و جو کنید</string>
    <string name="filters">فیلترها</string>
    <string name="remove_filters">حذف فیلترها</string>
    <string name="choose">انتخاب</string>
    <string name="gift_from_me">هدیه هایی که از طرف من…</string>
    <string name="gift_from_user">هدیه هایی که از این کاربر:</string>
    <string name="registered">ثبت شده</string>
    <string name="submitcomment">ثبت نظر</string>
    <string name="filter_profile_donate">اهدا شده</string>
    <string name="filter_profile_received">دریافت شده</string>
    <string name="save">ذخیره</string>
    <string name="cancel">لغو</string>
    <string name="profile">پروفایل</string>
    <string name="situation">وضعیت</string>
    <string name="rejected_place_holder">رد شده \n %s</string>
    <string name="rejected">رد شده</string>
    <string name="accepted">پذیرفته شده</string>
    <string name="show_profile">نمایش پروفایل</string>
    <string name="my_profile">پروفایل من</string>
    <string name="show_number">نمایش شماره تلفن</string>
    <string name="user_name_place_holder">نام کاربری</string>
    <string name="conversations">گفتگو‌ها</string>
    <string name="submit_gift">ثبت هدیه</string>
    <string name="gift_title">عنوان هدیه</string>
    <string name="submit_gift_title_message">در عنوان هدیه به موارد مهم اشاره کنید. (حداقل ۵ حرف)</string>
    <string name="submit_gift_price_message">ارزش مالی هدیه به دریافت کننده نمایش داده نخواهد شد و تنها برای بهبود کیفیت و بدست آوردن آمار کاربرد دارد. (حداقل ۱۰۰۰ تومان)</string>
    <string name="submit_gift_description_message">جزئیات قابل توجه هدیه خود را به طور کامل ذکر نمایید. (حداقل ۵ حرف)</string>
    <string name="price_range">حدود قیمت</string>
    <string name="price_range_hint">_ _ _ , _ _ _ تومان</string>
    <string name="gift_image">عکس هدیه (اجباری)</string>
    <string name="choose_category">انتخاب دسته بندی</string>
    <string name="submit">ثبت</string>
    <string name="chatHintMessage">پیام …</string>
    <string name="unblock">رفع بلاک</string>
    <string name="start_chat">شروع گفتگو</string>
    <string name="about_us">معرفی دیوار مهربانی</string>
    <string name="about_us_message_part_1">دیوار مهربانی ، ایده‌ای برای کمک به نیازمندان در ایران تبدیل به موضوع مورد بحث سایت های خبری انگلیسی زبان شد. سایتهایی نظیر ‏Lonely Planet‏ و ‏France24‎‏ خبری را درباره این رفتار مردمی مردم ایران اختصاص داده اند و تصاویری در ‏این ارتباط منتشر کردند تا بار دیگر مهربانی مردم ایران زبانزد خاص و عام شود</string>
    <string name="about_us_message_part_2">فقیر و غنی از دیوار مهربانی بهره ببرند</string>
    <string name="about_us_message_part_3">هنگام شنیدن نام دیوار مهربانی اولین چیزی که به ذهنمان خطور می کند کمک به افراد نیازمند است اما اینگونه نیست دیوار مهربانی متعلق به همه ی مردم است این دیوار الزاما فقط برای کمک به فقرا نیست داراترین فرد نیز می تواند ضمن کمک به دیوار مهربانی از وسایل آن استفاده کند وسایلی که فقط لباس نیست. دیگر دارا و ندار بودن مطرح نیست همه ی آدم ها می توانند از این دیوار مهربانی بهره ببرند و به راحتی نیازهای خود را در دیوار جستجو کنند و از آن استفاده نمایند.  افراد غنی به آسانی می توانند وسایلی را که نیاز دارند در کمترین زمان جستجو کنند و از آن استفاده نمایند.</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="logout_message">آیا میخواهید از حساب کاربری خود خارج شوید؟</string>
    <string name="login_to_submit_order">برای ثبت آگهی وارد حساب کاربری خود شوید</string>
    <string name="login_to_show_conversations">برای نمایش گفتگوها وارد حساب کاربری خود شوید</string>
    <string name="enter">ورود</string>
    <string name="no_conversation">گفتگویی وجود ندارد</string>
    <string name="submit_request_for_chat">برای ایجاد گفتگو ابتدا درخواستی برای یک هدیه ثبت کنید</string>
    <string name="received_gift_empty_message">شما هدیه‌ای دریافت نکرده اید</string>
    <string name="received_gift_others_empty_message">این کاربر هدیه‌ای دریافت نکرده است</string>
    <string name="donated_gift_empty_message">از طرف شما هدیه‌ای اهدا نشده است</string>
    <string name="donated_gift_others_empty_message">این کاربر هدیه اهدا نشده ندارد</string>
    <string name="registered_gift_empty_message">شما هدیه ثبت شده‌ای ندارید</string>
    <string name="registered_gift_others_empty_message">این کاربر هدیه ثبت شده‌ای ندارد</string>
    <string name="accepted_gift_others_empty_message">این کاربر هدیه پذیرفته شده‌ای ندارد</string>
    <string name="rejected_gift_others_empty_message">این کاربر هدیه رد شده‌ای ندارد</string>
    <string name="clear">پاک کردن</string>
    <string name="peak_user">انتخاب كاربر</string>
    <string name="new_message">پیغام جدید</string>
    <string name="error_sending_message">خطا در ارسال پیام</string>
    <string name="pros_and_cons">انتقادات و پیشنهادات</string>
    <string name="report_bug">گزارش خطا</string>
    <string name="install_telegram">برای ارتباط با پشتیبانی ابتدا تلگرام را نصب کنید</string>
    <string name="gift_submitted_successfully">هدیه شما با موفقیت ثبت شده است. بعد از بررسی و تایید، در سریع ترین زمان ممکن به نمایش  دیگران در خواهد آمد
شما میتوانید از صفحه پروفایل به هدیه های ثبت شده خود دسترسی داشته باشید
</string>
    <string name="charity_submitted_successfully">خيريه شما با موفقیت ثبت شده است. بعد از بررسی و تایید، در سریع ترین زمان ممکن به نمایش  دیگران در خواهد آمد
</string>
    <string name="verify_code_error">کد وارد شده صحیح نمی باشد.</string>
    <string name="which_gift_to_donate">کدام هدیه را اهدا می کنید؟</string>
    <string name="no_gift_to_donate">برای اهدا، هدیه‌ای ثبت نکرده اید.</string>
    <string name="error_in_donate">خطا در اهدا هدیه، لطفا دوباره تلاش کنید</string>
    <string name="gift_donated">هدیه با موفقیت اهدا شد</string>
    <string name="no_block_user">هیچ کاربری بلاک نشده است</string>
    <string name="blocked_count">%s کاربر بلاک شده اند</string>
    <string name="one_user_blocked_count">%s کاربر بلاک شده</string>
    <string name="no_gift_to_show">هدیه‌ای یافت نشد</string>
    <string name="unblock_user_question">کاربر %s رفع بلاک شود؟</string>
    <string name="request_for_users_error_message">به علت کرونا در حال حاضر تنها امکان درخواست توسط خیریه ها وجود دارد</string>
    <string name="ok">باشه</string>
    <string name="situation_in_review_queue">در صف بررسی</string>
    <string name="situation_confirm">تایید شده</string>
    <string name="deleted">حذف شده</string>
    <string name="gift_received">دریافت شده</string>
    <string name="you_have_new_update">شما آپدیت جدیدی دارید</string>
    <string name="update">بروزرسانی</string>
    <string name="force_update_message">نسخه فعلی برنامه دیگر پشتیبانی نمی شود جهت بهرهمندی از امکانات جدید برنامه لطفا برنامه را بروزرسانی کنید.</string>
    <string name="optional_update_message">نسخه جدید برای این برنامه آمده است جهت بهرهمندی از امکانات جدید برنامه لطفا برنامه را بروزرسانی کنید.</string>
    <string name="check_submitted_gifts">بررسی هدیه های ثبت شده</string>
    <string name="check_submitted_Charity">بررسی خيريه های ثبت شده</string>
    <string name="users">كاربران</string>
    <string name="reject_gift">رد هدیه</string>
    <string name="reject_charity">رد </string>
    <string name="reason_of_reject">دلیل رد هدیه</string>
    <string name="Please_write_reason">لطفا دلیل رد هدیه را بنویسید</string>
    <string name="submit_charity">ثبت خيريه</string>
    <string name="add_charity_description">لطفا مشخصات خیریه خود را در تلگرام برای ما ارسال نمایید.</string>
    <string name="submit_gift_reminder_description">با هدیه دادن وسایلی که دیگر از آنها استفاده نمیکنید، به راحتی  میتوانید نیاز یک نیازمند را برطرف سازید.</string>
    <string name="later">بعدا</string>
</resources>