<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.farshidabz.kindnesswall.view.authentication.AuthenticationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.authentication.InsertPhoneNumberFragment">

        <TextView
            android:id="@+id/sendAndGetGiftText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/register_for_get_and_send_gifts"
            android:textColor="@color/secondaryTextColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kindnessWallText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textColor="@color/secondaryTextColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendAndGetGiftText" />

        <LinearLayout
            android:id="@+id/phoneNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onPhoneNumberChanged(text)}"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/phone_number_hint"
                    android:layoutDirection="ltr"
                    android:maxLength="10"
                    android:padding="4dp"
                    android:textAlignment="gravity" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginTop="2dp"
                        app:srcCompat="@drawable/ic_drop_down_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layoutDirection="ltr"
                        android:text="@string/_98" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/phoneNumberDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/errorPhoneNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/phone_number_is_wrong"
                android:textColor="@color/red" />

        </LinearLayout>

        <TextView
            android:id="@+id/sendPhoneNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/primary_round_selector_4dp"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberContainer" />

        <TextView
            android:id="@+id/skipAuthenticationTextView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="28dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:text="@string/skip"
            android:textColor="@color/secondaryTextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/sendPhoneNumberTextView" />

    </LinearLayout>

</layout>