<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.authentication.InsertPhoneNumberFragment">

        <TextView
            android:id="@+id/sendAndGetGiftText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/insert_verification_code"
            android:textColor="@color/secondaryTextColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kindnessWallText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:maxLength="4"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="16dp"
            android:paddingBottom="4dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp" />

        <View
            android:id="@+id/phoneNumberDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/countDownNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/red"
            tools:text="00:30" />

        <TextView
            android:id="@+id/errorPhoneNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/phone_number_is_wrong"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/sendVersificationTextView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/primary_round_selector_4dp"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberContainer" />

        <TextView
            android:id="@+id/sendVerificationCodeAgainTextView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="28dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="28dp"
            android:gravity="center"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:text="@string/send_again"
            android:textColor="@color/secondaryTextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/sendVersificationTextView" />

        <TextView
            android:id="@+id/skipAuthenticationTextView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="28dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:text="@string/skip"
            android:textColor="@color/secondaryTextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/sendVersificationTextView" />

    </LinearLayout>

</layout>